--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,11 @@
 FROM racket/racket:8.8
 WORKDIR /app
 RUN apt update -y && apt upgrade -y \
-    && apt install -y --no-install-recommends git wget \
+    && apt install -y --no-install-recommends git curl \
     && apt autoclean -y \
     && apt autoremove -y \
     && rm -rf /var/lib/apt/lists/* \
-    && wget https://docs.breezewiki.com/files/breezewiki-dist.tar.gz
+    && curl https://docs.breezewiki.com/files/breezewiki-dist.tar.gz | tar xvz
     && ./breezewiki-dist/bin/dist
 EXPOSE 10416
 CMD ["racket", "dist.rkt"]
